peac_dev/force-app/main/default/objects/CPC_Data__c/CPC_Data__c.object-meta.xml
<CustomObject>
    <label>CPC Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CPC Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPC Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>