peac_dev/force-app/main/default/objects/CPC_Data__c/fields/Contract_Number_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number Lookup</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>CPC Data</relationshipLabel>
    <relationshipName>CPC_Data</relationshipName>
    <type>Lookup</type>
</CustomField>