peac_dev/force-app/main/default/objects/CPC_Data__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPC Data</relationshipLabel>
    <relationshipName>CPC_Data</relationshipName>
    <type>Lookup</type>
</CustomField>