peac_dev/force-app/main/default/objects/CPC_Data__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPC Data (Dealer Name)</relationshipLabel>
    <relationshipName>CPC_Data1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>