peac_dev/force-app/main/default/objects/CPC_Data__c/fields/Federation_Id__c.field-meta.xml
<CustomField>
    <fullName>Federation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Federation Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>