peac_dev/force-app/main/default/objects/CPC_Data__c/fields/Meter_Read_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Meter_Read_Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meter Read Begin Date</label>
    <type>Date</type>
</CustomField>