peac_dev/force-app/main/default/objects/CPC_Data__c/fields/PEAC_Check_ACH_Date__c.field-meta.xml
<CustomField>
    <fullName>PEAC_Check_ACH_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEAC Check/ACH Date</label>
    <type>Date</type>
</CustomField>